# simple_timer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  simple_timer.hpp
example/: basic_example.cpp
